--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"@sveltejs/adapter-vercel": "^1.0.0-next.63",
 		"chart.js": "^4.3.0",
 		"cryptocurrency-icons": "^0.18.0",
-		"pnpm": "^7.2.1",
 		"seeded-rand": "^2.0.1",
 		"svelte-flagpack": "^1.0.0",
 		"svelte-i18n": "^3.4.0",
@@ -44,7 +43,6 @@
 		"svelte-tradingview-widget": "^2.3.0",
 		"svrollbar": "^0.12.0",
 		"tsparticles": "^2.1.0",
-		"uuid": "^8.3.2",
-		"yarn": "^1.22.19"
+		"uuid": "^8.3.2"
 	}
 }
