--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"svelte-preprocess": "^4.10.1",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"typescript": "~4.6.2",
+		"vite": "^6.3.5"
 	},
 	"type": "module",
 	"dependencies": {
