--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fouita/pagination": "^0.0.2",
 		"@supabase/supabase-js": "^1.35.4",
 		"@sveltejs/kit": "1.0.0-next.348",
+		"@sveltejs/vite-plugin-svelte": "1.3.0",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.2",
 		"autoprefixer": "^10.4.7",
