--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
 		"svelte-preprocess": "^4.10.1",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.3.1",
-		"typescript": "~4.6.2",
-		"vite": "^3.2.11"
+		"typescript": "~4.6.2"
 	},
 	"type": "module",
 	"dependencies": {
