--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
 	},
 	"devDependencies": {
 		"@fouita/pagination": "^0.0.2",
-		"@supabase/supabase-js": "^1.35.4",
-		"@sveltejs/kit": "1.0.0-next.348",
-		"@sveltejs/vite-plugin-svelte": "1.3.0",
-		"@tailwindcss/forms": "^0.5.2",
-		"@tailwindcss/typography": "^0.5.2",
-		"autoprefixer": "^10.4.7",
-		"postcss": "^8.4.14",
-		"prettier": "^2.6.2",
-		"prettier-plugin-tailwindcss": "^0.1.11",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
+		"@supabase/supabase-js": "^2.39.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/forms": "^0.5.7",
+		"@tailwindcss/typography": "^0.5.10",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.32",
+		"prettier": "^3.1.0",
+		"prettier-plugin-tailwindcss": "^0.5.7",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.0",
 		"svelte-cryptocurrency-icons": "^0.1.5",
-		"svelte-outclick": "^2.6.5",
-		"svelte-preprocess": "^4.10.1",
-		"tailwindcss": "^3.0.24",
-		"tslib": "^2.3.1",
-		"typescript": "~4.6.2",
-		"vite": "^3.0.0"
+		"svelte-outclick": "^3.7.1",
+		"svelte-preprocess": "^5.1.0",
+		"tailwindcss": "^3.3.6",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.0",
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.0-next.63",
-		"chart.js": "^4.3.0",
-		"cryptocurrency-icons": "^0.18.0",
+		"@sveltejs/adapter-vercel": "^4.0.5",
+		"chart.js": "^4.4.0",
+		"cryptocurrency-icons": "^0.18.1",
 		"seeded-rand": "^2.0.1",
 		"svelte-flagpack": "^1.0.0",
-		"svelte-i18n": "^3.4.0",
-		"svelte-loading-spinners": "^0.1.7",
-		"svelte-particles": "^2.1.0",
-		"svelte-select": "^4.4.7",
+		"svelte-i18n": "^4.0.0",
+		"svelte-loading-spinners": "^0.3.4",
+		"svelte-particles": "^3.0.0",
+		"svelte-select": "^5.8.3",
 		"svelte-tradingview-widget": "^2.3.0",
 		"svrollbar": "^0.12.0",
-		"tsparticles": "^2.1.0",
-		"uuid": "^8.3.2"
+		"tsparticles": "^3.0.3",
+		"uuid": "^9.0.1"
 	}
 }
